--- a/package.json
+++ b/package.json
@@ -21,16 +21,17 @@
     "@angular/platform-browser-dynamic": "~12.1.1",
     "@angular/router": "~12.1.1",
     "@capacitor/app": "1.0.6",
-    "@capacitor/core": "3.3.1",
+    "@capacitor/camera": "^1.2.2",
+    "@capacitor/core": "^3.3.1",
     "@capacitor/haptics": "1.1.3",
     "@capacitor/keyboard": "1.1.3",
     "@capacitor/status-bar": "1.0.6",
     "@ionic/angular": "^5.5.2",
+    "firebase": "^9.4.0",
+    "rxfire": "^6.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
-    "zone.js": "~0.11.4",
-    "firebase": "^9.4.0",
-    "rxfire": "^6.0.0"
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~12.1.1",
